--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
             <h3><a href="">Quantitative Trading</a></h3>
           </div>
         </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
+        <!-- <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-coins-line"></i>
             <h3><a href="">Portfolio Management</a></h3>
           </div>
-        </div>
+        </div> -->
         <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
           <div class="icon-box">
             <i class="ri-database-2-line"></i>
             <h3><a href="">Business Intelligence</a></h3>
           </div>
         </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
+        <!-- <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
           <div class="icon-box">
             <i class="ri-android-line"></i>
             <h3><a href="">Workflow Automation</a></h3>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
@@ -245,36 +245,36 @@
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="ri-coins-line"></i></div>
-              <h4><a href="">Portfolio Management</a></h4>
+            <div class="icon-box">              
+              <div class="icon"><i class="ri-database-2-line"></i></div>
+              <h4><a href="">Business Intelligence</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="ri-database-2-line"></i></div>
-              <h4><a href="">Business Intelligence</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <div class="icon"><i class="ri-coins-line"></i></div>
+              <h4><a href="">Portfolio Management</a></h4>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="ri-android-line"></i></div>
               <h4><a href="">Workflow Automation</a></h4>
               <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h4><a href="">Computer Magic</a></h4>
               <p>We can do anything you need with a computer, really. Yes, we are that good.</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -286,9 +286,9 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>Let our forecasts bring your investments to another level.</h3>
+          <p>See for yourself how our data-driven algorithms generate financial forecasts to support our recommendation systems for options trading.</p>
+          <a class="cta-btn" href="#contact">Learn More</a>
         </div>
 
       </div>
@@ -507,17 +507,17 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <img src="https://vignette.wikia.nocookie.net/villains/images/b/b6/Resident-evil-retribution-11.jpg/revision/latest?cb=20171018185508" class="testimonial-img" alt="">
+            <h3>The Red Queen</h3>
+            <h4>CEO of Umbrella Corporation</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              CMidas Financial has shaped the business we have today. By leveraging CMidas forecasting models, I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future to better act in the present.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
-          <div class="testimonial-item">
+          <!-- <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
             <h3>Sara Wilsson</h3>
             <h4>Designer</h4>
@@ -526,9 +526,9 @@
               Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div> -->
 
-          <div class="testimonial-item">
+          <!-- <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
             <h3>Jena Karlis</h3>
             <h4>Store Owner</h4>
@@ -537,9 +537,9 @@
               Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div> -->
 
-          <div class="testimonial-item">
+          <!-- <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
             <h4>Freelancer</h4>
@@ -548,9 +548,9 @@
               Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div> -->
 
-          <div class="testimonial-item">
+          <!-- <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>John Larson</h3>
             <h4>Entrepreneur</h4>
@@ -559,7 +559,7 @@
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div> -->
 
         </div>
 
@@ -580,7 +580,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="https://images.unsplash.com/photo-1535378620166-273708d44e4c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1132&q=80" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
@@ -589,26 +589,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Alice Fixer</h4>
+                <span>Founder, Chief Executive Officer</span>
               </div>
             </div>
           </div>
@@ -616,7 +598,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="https://etgeekera.files.wordpress.com/2014/03/glados-portal.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
@@ -625,16 +607,16 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>SaFOS</h4>
+                <span>Co-founder, VP Sales and Forecasting</span>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
@@ -643,8 +625,26 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Bob Droid</h4>
+                <span>Chief Technology Officer</span>
+              </div>
+            </div>
+          </div>          
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
+              <div class="member-img">
+                <img src="https://cdn.pixabay.com/photo/2017/12/10/17/00/robot-3010309_960_720.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Eve Bot</h4>
+                <span>Chief Marketing Officer</span>
               </div>
             </div>
           </div>
@@ -739,7 +739,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Gp<span>.</span></h3>
+              <img src="assets/img/cmidas_logo.png" alt="" class="img-fluid">
+              <h1></h1>
               <p>
                 Charging Bull <br>
                 New York, NY 10004<br><br>
@@ -772,15 +773,15 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Financial Forecasts</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Quantitative Trading</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolio Management</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolio Management</a></li> -->
               <li><i class="bx bx-chevron-right"></i> <a href="#">Business Intelligence</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Workflow Automation</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Workflow Automation</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Subscribe to our newsletter and be the first to know when more information is available:</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
