--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Track and optimize your sales team in real time
 
 <section class="hero">
 	<div class="text-container">
-		<h1 class=""><strong>Agenda Saúde</strong> é uma aplicação open-source para o gerenciamento de filas de vacinação e exames focada no combado ao Covid-19</h1>
+		<h1 class=""><strong>Agenda Saúde</strong> é uma aplicação open-source para o gerenciamento de filas de vacinação e exames focada no combate ao Covid-19</h1>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/about/">Conheça!</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot " />
