Initial content changes
- Changed image in hero section.
- Added content for landing page.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Test drive your new site nav
+description: Try your new nav on the old site. No code required.
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">Will your new navigation ideas <strong>go the distance?</strong> Take it for a spin on your current site.</h1>
+		<p class="subtext editable">Try before you buy, click before you code.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/ia-animation.gif" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -17,8 +17,7 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Next level <strong>benefits</strong></h2><p>Try out new navigation with tests in realtime on a working site. Validate card sorts and tree jacks with qualitative research. Work out thorny information architecture issues before your team starts coding.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -27,13 +26,33 @@ description: Track and optimize your sales team in real time
 	</section>
 
 	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+		<div class="container">
+			<h2>Creating a new navigation has never been <strong> easier</strong></h2>
+			<div class="container flex">
+				<div class="text editable">
+					<p>Define your new navigation labels with links to the current site.</p>
+				</div>
+				<div class="image">
+					<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				</div>
 			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<br>
+			<div class="container flex">
+				<div class="text editable">
+					<p>Enter the address of your current site.</p>
+				</div>
+				<div class="image">
+					<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				</div>
+			</div>
+			<br>
+			<div class="container flex">
+				<div class="text editable">
+					<p>Set the amount of overlap you need to cover the current nav.</p>
+				</div>
+				<div class="image">
+					<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				</div>
 			</div>
 		</div>
 	</section>
@@ -41,11 +60,7 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<h2>You now have a working navigation component layered on top of the current site that testers can use to experience the current content in a new way!</h2>
 			</div>
 		</div>
 	</section>
