--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Australian address validation and reverse geocoding
+description: Made easy.
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
+		<h1 class="editable"><strong>Australian address validation</strong></h1>
+		<h1 class="editable">and reverse geocoding</h1>
+		<p class="subtext editable">Made easy.</p>
+		<div class="cta button alt"><a href="{{ site.sign_up_url }}">Get Started Free</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
@@ -14,56 +15,34 @@ description: Track and optimize your sales team in real time
 </section>
 
 <div class="content">
+	<a name="pricing"></a>
 	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+		<div class="text-container">
+			<h1 class="editable center-text"><strong>Pricing</strong></h1>
+			<div class="plans">
+				{% for plan in site.pricing_table %}
+					{% include pricing-box.html plan=plan %}
+				{% endfor %}
 			</div>
 		</div>
 	</section>
 
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+	{% if site.show_testimonial %}
+		<section class="testimonial">
+			<div class="container flex">
+				<div class="testimonial-block">
+					<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
+					<blockquote>
+						<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
+						<p class="editable author">Jim James - CEO of Global Corp.</p>
+					</blockquote>
+				</div>
 			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
-			</div>
-		</div>
-	</section>
+		</section>
+	{% endif %}
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable"><strong>Sign up</strong> today</h2>
+		<div class="button alt"><a href="{{ site.sign_up_url }}">Get Started Free</a></div>
 	</section>
 </div>
