--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ description: Made easy.
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable"><strong>Australian address validation</strong></h1>
-		<h1 class="editable">and reverse geocoding</h1>
-		<p class="subtext editable">Made easy.</p>
+		<h1><strong>Australian address validation</strong></h1>
+		<h1>and reverse geocoding</h1>
+		<p class="subtext">Made easy.</p>
 		<div class="cta button alt"><a href="{{ site.sign_up_url }}">Get Started Free</a></div>
 	</div>
 </section>
@@ -15,7 +15,7 @@ description: Made easy.
 	<a name="pricing"></a>
 	<section>
 		<div class="text-container">
-			<h1 class="editable center-text"><strong>Pricing</strong></h1>
+			<h1 class="center-text"><strong>Pricing</strong></h1>
 			<div class="plans">
 				{% for plan in site.pricing_table %}
 					{% include pricing-box.html plan=plan %}
@@ -30,8 +30,8 @@ description: Made easy.
 				<div class="testimonial-block">
 					<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 					<blockquote>
-						<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-						<p class="editable author">Jim James - CEO of Global Corp.</p>
+						<p>Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
+						<p class="author">Jim James - CEO of Global Corp.</p>
 					</blockquote>
 				</div>
 			</div>
@@ -39,7 +39,7 @@ description: Made easy.
 	{% endif %}
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Sign up</strong> today</h2>
+		<h2><strong>Sign up</strong> today</h2>
 		<div class="button alt"><a href="{{ site.sign_up_url }}">Get Started Free</a></div>
 	</section>
 </div>
